[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Clothes.gd" type="Script" id=1]
[ext_resource path="res://assets/briefs.png" type="Texture" id=2]
[ext_resource path="res://assets/zbriefs.png" type="Texture" id=3]
[ext_resource path="res://assets/jeans.png" type="Texture" id=4]
[ext_resource path="res://assets/dj shorts.png" type="Texture" id=5]
[ext_resource path="res://assets/sweat pants.png" type="Texture" id=6]
[ext_resource path="res://assets/old sweatshirt.png" type="Texture" id=7]
[ext_resource path="res://assets/dj shirt.png" type="Texture" id=8]
[ext_resource path="res://assets/raw shirt.png" type="Texture" id=9]
[ext_resource path="res://assets/atomic shirt.png" type="Texture" id=10]
[ext_resource path="res://assets/snowboard coat.png" type="Texture" id=11]
[ext_resource path="res://src/ItemDrag.gd" type="Script" id=12]
[ext_resource path="res://assets/trench coat.png" type="Texture" id=13]
[ext_resource path="res://assets/blue tux.png" type="Texture" id=14]
[ext_resource path="res://assets/jp school girl.png" type="Texture" id=15]
[ext_resource path="res://assets/camera.png" type="Texture" id=16]
[ext_resource path="res://assets/owo censor.png" type="Texture" id=17]
[ext_resource path="res://assets/bottoms_placeholder.png" type="Texture" id=18]
[ext_resource path="res://assets/tops_placeholder.png" type="Texture" id=19]

[node name="Clothes" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Wordrobe" type="ReferenceRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 193.0
margin_top = 17.0
margin_right = 775.0
margin_bottom = 527.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Underwear" type="Node" parent="Wordrobe" index="0"]

[node name="Briefs" type="TextureButton" parent="Wordrobe/Underwear" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 506.0
margin_top = 291.0
margin_right = 612.0
margin_bottom = 403.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )

[node name="ZBriefs" type="TextureButton" parent="Wordrobe/Underwear" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 963.0
margin_top = 360.0
margin_right = 1069.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="Bottoms" type="Node" parent="Wordrobe" index="1"]

[node name="Jeans" type="TextureButton" parent="Wordrobe/Bottoms" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 628.0
margin_top = 399.0
margin_right = 734.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="DJ Shorts" type="TextureButton" parent="Wordrobe/Bottoms" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 639.0
margin_top = 286.0
margin_right = 745.0
margin_bottom = 398.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Anchor", "Textures" ]

[node name="Sweats" type="TextureButton" parent="Wordrobe/Bottoms" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 499.0
margin_top = 389.0
margin_right = 605.0
margin_bottom = 501.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Tops" type="Node" parent="Wordrobe" index="2"]

[node name="Sweatshirt" type="TextureButton" parent="Wordrobe/Tops" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 654.0
margin_top = 40.0
margin_right = 739.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="DJ Shirt" type="TextureButton" parent="Wordrobe/Tops" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 651.0
margin_top = 164.0
margin_right = 736.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="Raw" type="TextureButton" parent="Wordrobe/Tops" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 533.0
margin_top = 177.0
margin_right = 618.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
_sections_unfolded = [ "Textures" ]

[node name="Atomic" type="TextureButton" parent="Wordrobe/Tops" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 533.0
margin_top = 48.0
margin_right = 614.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[node name="Outfits" type="Node" parent="Wordrobe" index="3"]

[node name="Snowboard" type="TextureButton" parent="Wordrobe/Outfits" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 224.0
margin_top = 303.0
margin_right = 330.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
script = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="Trench Coat" type="TextureButton" parent="Wordrobe/Outfits" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 355.0
margin_top = 332.0
margin_right = 461.0
margin_bottom = 523.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
script = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="Blue Tux" type="TextureButton" parent="Wordrobe/Outfits" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_top = 52.0
margin_right = 372.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
script = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="School Girl" type="TextureButton" parent="Wordrobe/Outfits" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 398.0
margin_top = 172.0
margin_right = 487.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
script = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="Accessories" type="Node" parent="Wordrobe" index="4"]

[node name="Camera" type="TextureButton" parent="Wordrobe/Accessories" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 409.0
margin_top = 96.0
margin_right = 458.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
script = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="OwO Censor" type="TextureButton" parent="Wordrobe/Accessories" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 381.0
margin_top = 43.0
margin_right = 486.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
script = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="Body" type="ReferenceRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 297.0
margin_right = 144.0
margin_bottom = 519.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Bottom" type="Sprite" parent="Body" index="0"]

position = Vector2( 57.9419, 144.296 )
texture = ExtResource( 18 )

[node name="Top" type="Sprite" parent="Body" index="1"]

position = Vector2( 64.0597, 55.3242 )
texture = ExtResource( 19 )

[connection signal="pressed" from="Wordrobe/Underwear/Briefs" to="." method="_on_Briefs_pressed"]

[connection signal="pressed" from="Wordrobe/Underwear/ZBriefs" to="." method="_on_ZBriefs_pressed"]

[connection signal="pressed" from="Wordrobe/Bottoms/Jeans" to="." method="_on_Jeans_pressed"]

[connection signal="pressed" from="Wordrobe/Bottoms/DJ Shorts" to="." method="_on_DJ_Shorts_pressed"]

[connection signal="pressed" from="Wordrobe/Bottoms/Sweats" to="." method="_on_Sweats_pressed"]

[connection signal="pressed" from="Wordrobe/Tops/Sweatshirt" to="." method="_on_Sweatshirt_pressed"]

[connection signal="pressed" from="Wordrobe/Tops/DJ Shirt" to="." method="_on_DJ_Shirt_pressed"]

[connection signal="pressed" from="Wordrobe/Tops/Raw" to="." method="_on_Raw_pressed"]

[connection signal="pressed" from="Wordrobe/Tops/Atomic" to="." method="_on_Atomic_pressed"]

[connection signal="gui_input" from="Wordrobe/Accessories/Camera" to="Wordrobe/Accessories/Camera" method="_on_outfit_gui_input"]

[connection signal="gui_input" from="Wordrobe/Accessories/OwO Censor" to="Wordrobe/Accessories/OwO Censor" method="_on_outfit_gui_input"]


